--- a/probabilistic_programming_background.ipynb
+++ b/probabilistic_programming_background.ipynb
@@ -40,19 +40,21 @@
     "* [Turing.jl](https://turing.ml/stable/) (julia)\n",
     "* [Gen](https://www.gen.dev/) (julia)\n",
     "* [NumPyro documentation](http://num.pyro.ai/en/stable/) (jax)\n",
-    "* [google/edward2: A simple probabilistic programming language.](https://github.com/google/edward2) (Tensorflow/Jax)\n",
+    "* [Edward2](https://github.com/google/edward2) (Tensorflow/Jax)\n",
+    "* Why not write your own? Everyone else seems to.\n",
     "\n",
     "\n",
     "## References\n",
     "\n",
     "* Jan-Willem van de Meent, Brooks Paige, Hongseok Yang, Frank Wood, [An Introduction to Probabilistic Programming](https://arxiv.org/abs/1809.10756)\n",
     "* [Bayes for Hackers](https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers)\n",
-    "* [Rob’s course](https://robsalomone.com/course-deep-probabilistic-models/) is nice and he has given us permission to use it if we credit him. - see also https://slides.com/robsal/autodiff/#/70\n",
+    "* [Rob Salomone’s course](https://robsalomone.com/course-deep-probabilistic-models/) is nice and he has given us permission to use it if we credit him. - see also https://slides.com/robsal/autodiff/#/70\n",
     "* [Statistical Rethinking | Richard McElreath](https://xcelab.net/rm/statistical-rethinking/) has gone viral as an introduction to some of this stuff.\n",
     "  It is [available on O’Reilly](https://learning.oreilly.com/library/view/statistical-rethinking-2nd/9780429639142/) (free for CSIRO people).\n",
     "  There is a \n",
     "  [PyMC3](https://github.com/gbosquechacon/statrethink_course_in_pymc3)\n",
     "  [and a numpyro](https://github.com/asuagar/statrethink-course-in-numpyro/) version.\n",
+    "* Kevin Murphy, [Probabilistic Machine Learning: An Introduction](https://probml.github.io/pml-book/book1.html)\n",
     "* Wi Ji Ma, Konrad Paul Kording, Daniel Goldreich, [Bayesian models of perception and action](https://www.bayesianmodeling.com)\n",
     "* Noah D. Goodman, Joshua B. Tenenbaum et al, [Probabilistic Models of Cognition - 2nd Edition](http://probmods.org/)\n",
     "* Noah D. Goodman and Andreas Stuhlmüller, [The Design and Implementation of Probabilistic Programming Languages](http://dippl.org/)\n",
@@ -67,6 +69,11 @@
     "* [Example: Kalman Filter](http://pyro.ai/examples/ekf.html)\n",
     "* [Mini-Pyro](http://pyro.ai/examples/minipyro.html)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
