--- a/primitives/02-conditioning_and_inference.ipynb
+++ b/primitives/02-conditioning_and_inference.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "A common use case in probabilistic programming is that we want to infer the\n",
-    "likelihood that a certain random variable will take a specific value. Pyro lets\n",
+    "likelihood that a certain random variable will take a specific value (i.e. the probability density of the distribution evaluated at that value). Pyro lets\n",
     "us do this easily for any site."
    ]
   },
@@ -59,7 +59,7 @@
     "scale_dist = make_dist(weight, noise)\n",
     "measurement_1 = pyro.sample(\"measurement_1\", scale_dist)\n",
     "prob = scale_dist.log_prob(measurement_1).exp()\n",
-    "print(f\"measurement: {measurement_1};\\t probability: {prob}\")\n"
+    "print(f\"measurement: {measurement_1};\\t likelihood: {prob}\")\n"
    ]
   },
   {
@@ -151,9 +151,9 @@
     "trace_1.compute_log_prob()\n",
     "nodes =  trace_1.nodes\n",
     "print(f\"weight: {nodes['weight']['value']},\"\n",
-    "      f\" probability {nodes['weight']['log_prob'].exp()}\")\n",
+    "      f\" likelihood {nodes['weight']['log_prob'].exp()}\")\n",
     "print(f\"measurement: {nodes['measurement']['value']},\"\n",
-    "      f\" probability {nodes['measurement']['log_prob'].exp()}\")"
+    "      f\" likelihood {nodes['measurement']['log_prob'].exp()}\")"
    ]
   },
   {
@@ -184,9 +184,9 @@
     "cond_trace.compute_log_prob()\n",
     "nodes = cond_trace.nodes\n",
     "print(f\"weight: {nodes['weight']['value']},\"\n",
-    "      f\" probability {nodes['weight']['log_prob'].exp()}\")\n",
+    "      f\" likelihood {nodes['weight']['log_prob'].exp()}\")\n",
     "print(f\"measurement: {nodes['measurement']['value']},\"\n",
-    "      f\" probability {nodes['measurement']['log_prob'].exp()}\")"
+    "      f\" likelihood {nodes['measurement']['log_prob'].exp()}\")"
    ]
   },
   {
@@ -199,8 +199,8 @@
    "source": [
     "We conditioned the `measurement` RV to evaluate to `9.5` so it was not sampled\n",
     "from its respective distribution. Note, however, that this does not affect the\n",
-    "probability of the observation. The probability returned by pyro is\n",
-    "$p(\\operatorname{measurement} = 9.5 | \\mathcal{N}(weight, 0.75)$, and not `1`, even though\n",
+    "probability of the observation. The likelihood returned by pyro is\n",
+    "$p(\\operatorname{measurement} = 9.5 | \\mathcal{N}(\\operatorname{weight}, 0.75)$, and not `1`, even though\n",
     "there was a `100%` chance of `measurement` evaluating to `9.5`. Similarly, if we\n",
     "remove the conditioning on `measurement`, we see that the likelihood of `weight`\n",
     "does not change, even though $p(\\operatorname{weight} | \\operatorname{measurement}) \\neq p(\\operatorname{weight})$."
@@ -221,10 +221,10 @@
     "trace = poutine.trace(cond_model).get_trace(guess)\n",
     "trace.compute_log_prob()\n",
     "weight_node = trace.nodes[\"weight\"]\n",
-    "print(f\"weight: {weight_node['value']}, probability: {weight_node['log_prob'].exp()}\")\n",
+    "print(f\"weight: {weight_node['value']}, likelihood: {weight_node['log_prob'].exp()}\")\n",
     "\n",
     "measurement_node = trace.nodes[\"measurement\"]\n",
-    "print(f\"measurement: {measurement_node['value']}, probability: {measurement_node['log_prob'].exp()}\")\n"
+    "print(f\"measurement: {measurement_node['value']}, likelihood: {measurement_node['log_prob'].exp()}\")\n"
    ]
   },
   {
@@ -272,9 +272,14 @@
     "`weight` changes the probability distribution of the downstream RV\n",
     "`measurement`. Repeatedly executing the above cell will produce a new\n",
     "unconditional PDF every time, because it depends on the stochastic sample from\n",
-    "$p(weight | guess=7.5)$. The conditional PDF won't change because it samples\n",
-    "deterministically from $p(weight = 9) = 1$"
+    "$p(\\operatorname{weight} | \\operatorname{guess}=7.5)$. The conditional PDF won't change because it samples\n",
+    "deterministically from $p(\\operatorname{weight} = 9) = 1$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
