--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -46,7 +46,7 @@
     "scale_dist = make_dist(weight, noise)\n",
     "measurement_1 = pyro.sample(\"measurement_1\", scale_dist)\n",
     "prob = scale_dist.log_prob(measurement_1).exp()\n",
-    "print(f\"measurement: {measurement_1};\\t probability: {prob}\")\n"
+    "print(f\"measurement: {measurement_1};\\t likelihood: {prob}\")\n"
    ]
   },
   {
@@ -171,9 +171,9 @@
     "cond_trace.compute_log_prob()\n",
     "nodes = cond_trace.nodes\n",
     "print(f\"weight: {nodes['weight']['value']},\"\n",
-    "      f\" probability {nodes['weight']['log_prob'].exp()}\")\n",
+    "      f\" likelihood {nodes['weight']['log_prob'].exp()}\")\n",
     "print(f\"measurement: {nodes['measurement']['value']},\"\n",
-    "      f\" probability {nodes['measurement']['log_prob'].exp()}\")"
+    "      f\" likelihood {nodes['measurement']['log_prob'].exp()}\")"
    ]
   },
   {
@@ -208,10 +208,10 @@
     "trace = poutine.trace(cond_model).get_trace(guess)\n",
     "trace.compute_log_prob()\n",
     "weight_node = trace.nodes[\"weight\"]\n",
-    "print(f\"weight: {weight_node['value']}, probability: {weight_node['log_prob'].exp()}\")\n",
+    "print(f\"weight: {weight_node['value']}, likelihood: {weight_node['log_prob'].exp()}\")\n",
     "\n",
     "measurement_node = trace.nodes[\"measurement\"]\n",
-    "print(f\"measurement: {measurement_node['value']}, probability: {measurement_node['log_prob'].exp()}\")\n"
+    "print(f\"measurement: {measurement_node['value']}, likelihood: {measurement_node['log_prob'].exp()}\")\n"
    ]
   },
   {
