begin tensor shape notebook

--- a/primitives/conditioning_and_inference.ipynb
+++ b/primitives/conditioning_and_inference.ipynb
@@ -90,7 +90,7 @@
     "ones = torch.ones(100000)\n",
     "multiscale_dist = make_dist(weight * ones, noise * ones)\n",
     "samples = pyro.sample(\"sample\", multiscale_dist)\n",
-    "plt.hist(samples.cpu().numpy(), bins=100, density=True, color=\"blue\")\n",
+    "plt.hist(samples.cpu().numpy(), bins=100, density=True, color=\"blue\", alpha=0.5)\n",
     "plt.show()"
    ]
   },
@@ -268,7 +268,7 @@
    "metadata": {},
    "source": [
     "Here we plotted the PDF of `measurement` in both an unconditional model (blue)\n",
-    "and a model conditioned on a `weigh = 9` (red). We can see that conditioning on\n",
+    "and a model conditioned on `weight = 9` (red). We can see that conditioning on\n",
     "`weight` changes the probability distribution of the downstream RV\n",
     "`measurement`. Repeatedly executing the above cell will produce a new\n",
     "unconditional PDF every time, because it depends on the stochastic sample from\n",
