--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -178,7 +178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n"
+    "multi_img_time(pred.cpu().numpy(), n_cols=5, interval=5);\n",
+    "plt.savefig('./fno_forward_predict_sheet.jpg')"
    ]
   },
   {
