co-plot posteriors

--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -116,8 +116,8 @@
     "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "latent_fairness_samples = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
-    "plt.hist(latent_fairness_samples, bins=np.linspace(0,1,33), density=True, color=\"red\")\n",
+    "fairness_samples_1 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
     "plt.show()"
@@ -185,6 +185,7 @@
    "outputs": [],
    "source": [
     "tosses = torch.tensor([1,1,0,1,0], dtype=torch.float)\n",
+    "pyro.set_rng_seed(102)\n",
     "\n",
     "nuts_kernel = NUTS(model, jit_compile=True)\n",
     "mcmc = MCMC(nuts_kernel, num_samples=2000, warmup_steps=200)\n",
@@ -194,8 +195,9 @@
     "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "latent_fairness_samples = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
-    "plt.hist(latent_fairness_samples, bins=np.linspace(0,1,33), density=True, color=\"red\")\n",
+    "fairness_samples_5 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
+    "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
     "plt.show()"
@@ -268,14 +270,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pyro.set_rng_seed(103)\n",
     "nuts_kernel = NUTS(model, jit_compile=True)\n",
     "mcmc = MCMC(nuts_kernel, num_samples=2000, warmup_steps=200)\n",
     "mcmc.run(tosses)\n",
     "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "latent_fairness_samples = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
-    "plt.hist(latent_fairness_samples, bins=np.linspace(0,1,33), density=True, color=\"red\")\n",
+    "fairness_samples_1000 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
+    "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
+    "plt.hist(fairness_samples_1000, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.8, label = \"1000 observation posterior\")\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
     "plt.show()"
@@ -295,6 +300,27 @@
    "outputs": [],
    "source": [
     "print(f\"We now think the fairness is {latent_fairness_samples.mean():.3f} ± {latent_fairness_samples.std():.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* http://pyro.ai/examples/bayesian_regression.html\n",
+    "* http://pyro.ai/examples/bayesian_regression_ii.html\n",
+    "* http://pyro.ai/examples/intro_part_i.html\n",
+    "* http://pyro.ai/examples/intro_part_ii.html\n",
+    "* http://pyro.ai/examples/effect_handlers.html\n",
+    "* http://pyro.ai/examples/sir_hmc.html\n",
+    "* https://docs.pyro.ai/en/1.7.0/poutine.html\n",
+    "* http://pyro.ai/examples/mle_map.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## archived SVI stuff\n"
    ]
   },
   {
@@ -383,27 +409,6 @@
     "plt.plot(measurements, posterior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"posterior\");\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"red\", label=\"prior\");\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* http://pyro.ai/examples/bayesian_regression.html\n",
-    "* http://pyro.ai/examples/bayesian_regression_ii.html\n",
-    "* http://pyro.ai/examples/intro_part_i.html\n",
-    "* http://pyro.ai/examples/intro_part_ii.html\n",
-    "* http://pyro.ai/examples/effect_handlers.html\n",
-    "* http://pyro.ai/examples/sir_hmc.html\n",
-    "* https://docs.pyro.ai/en/1.7.0/poutine.html\n",
-    "* http://pyro.ai/examples/mle_map.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
