--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -299,7 +299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"We now think the fairness is {latent_fairness_samples.mean():.3f} ± {latent_fairness_samples.std():.3f}\")"
+    "print(f\"We now believe the fairness is {latent_fairness_samples.mean():.3f} ± {latent_fairness_samples.std():.3f}\")"
    ]
   },
   {
@@ -314,6 +314,13 @@
     "* http://pyro.ai/examples/sir_hmc.html\n",
     "* https://docs.pyro.ai/en/1.7.0/poutine.html\n",
     "* http://pyro.ai/examples/mle_map.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An actual regression problem"
    ]
   },
   {
