complete tensor shapes notebook

--- a/primitives/03-dependence_and_shapes.ipynb
+++ b/primitives/03-dependence_and_shapes.ipynb
@@ -145,6 +145,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -178,6 +179,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -196,7 +198,7 @@
     "`sample_shape`. The shape of `log_prob`, on the other hand, is the concatenation\n",
     "of `sample_shape` and `batch_shape`, since the PDF is defined over entire\n",
     "events and not individual dimensions of them. As far as we can tell, pyro does\n",
-    "not support getting conditional probabilities for that are conditioned on some\n",
+    "not support getting conditional probabilities that are conditioned on some\n",
     "variables of a multivariate distribution.\n"
    ]
   },
@@ -205,6 +207,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -214,6 +217,134 @@
     "s = d.sample(sample_shape)\n",
     "assert(s.shape == sample_shape + d.batch_shape + d.event_shape)\n",
     "assert(d.log_prob(s).shape == sample_shape + d.batch_shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After we've already created a distribution, we have a few mechanisms for\n",
+    "changing the shapes of the distributions. Note that these mechanisms are not\n",
+    "in-place, i.e. they return a new distribution.\n",
+    "\n",
+    "`to_event(n)` will move the `n` rightmost dimensions of the `batch_shape`\n",
+    "(independent) to the left end of the `event_shape`, thus making them dependent.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "default_d = dist.Normal(torch.zeros(3, 2, 5), 1)\n",
+    "print(f\"batch_shape: {default_d.batch_shape};\\t\"\n",
+    "      f\"event_shape: {default_d.event_shape}\")\n",
+    "reshaped_d = default_d.to_event(1)\n",
+    "print(f\"batch_shape: {reshaped_d.batch_shape};\\t\"\n",
+    "      f\"event_shape: {reshaped_d.event_shape};\\t\")\n",
+    "double_reshaped_d = default_d.to_event(2)\n",
+    "print(f\"batch_shape: {double_reshaped_d.batch_shape};\\t\"\n",
+    "      f\"event_shape: {double_reshaped_d.event_shape};\\t\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is no equivalent function that can convert dependent RVs to independent\n",
+    "RVs. However, `expand()` can add new batch dimensions to the left of the\n",
+    "`batch_shape`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def model1():\n",
+    "    default_d = dist.Normal(torch.zeros(4,5), 1).to_event(1)\n",
+    "    x = pyro.sample(\"x\", default_d)\n",
+    "    y = pyro.sample(\"y\", default_d.expand([10, 4]))\n",
+    "    z = pyro.sample(\"z\", default_d.expand([10] + [*default_d.batch_shape]))\n",
+    "\n",
+    "trace = poutine.trace(model1).get_trace()\n",
+    "for k in ['x', 'y', 'z']:\n",
+    "      print(f\"{k}: batch_shape = {trace.nodes[k]['fn'].batch_shape}\\t\"\n",
+    "            f\"event_shape = {trace.nodes[k]['fn'].event_shape}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the argument to `expand()` must be an iterable and its values must\n",
+    "match the existing `batch_shape` at non-singleton dimensions. I.E. in the above\n",
+    "example the right-most entry of the argument `[10, 4]` has to be `4` so that it\n",
+    "matches the `-1th` entry of the distribution's `batch_shape`. This can be\n",
+    "cumbersome, so instead you might want to use the context manager `pyro.plate`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def model2():\n",
+    "    default_d = dist.Normal(torch.zeros(4,5), 1).to_event(1)\n",
+    "    x = pyro.sample(\"x\", default_d)\n",
+    "    with pyro.plate(\"plate_0\", 10, dim=-2):\n",
+    "        y = pyro.sample(\"y\", default_d)\n",
+    "    with pyro.plate(\"plate_1\", 10, dim=-3):\n",
+    "        z = pyro.sample(\"z\", default_d)\n",
+    "    w =  pyro.sample(\"w\", default_d.expand([10, 4]))\n",
+    "    with pyro.plate(\"plate_2\", 4, dim=-1):\n",
+    "        a = pyro.sample(\"a\", default_d)\n",
+    "\n",
+    "\n",
+    "\n",
+    "trace = poutine.trace(model2).get_trace()\n",
+    "for k in ['x', 'y', 'z', 'w', 'a']:\n",
+    "      print(f\"{k}: batch_shape = {trace.nodes[k]['fn'].batch_shape}\\t\"\n",
+    "            f\"event_shape = {trace.nodes[k]['fn'].event_shape}\")\n",
+    "      print(trace.nodes[k]['cond_indep_stack'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we called `pyro.plate` with 3 arguments: 'name`, `size` and `dim`.\n",
+    "\n",
+    "`name` must be a unique identifier for each plate. `size` specifies the size of\n",
+    "a new batch dimension, and `dim` the position at which to insert it. `dim` is\n",
+    "always negatively indexed, and if it indicates a non-singleton dimension of\n",
+    "`batch_shape`, then `size` must match that dimension. However, unlike `expand`,\n",
+    "if we specify a `dim < -len(batch_shape)` then `pyro.plate` will automatically\n",
+    "handle the rest of the shape, and even add new singleton dimensions if\n",
+    "necessary.\n",
+    "\n",
+    "Another benefit is that any dimension declared independent with `pyro.plate`\n",
+    "will have some conditional independence information added to its corresponding\n",
+    "node. This information can be exploited by certain inference algorithms to run\n",
+    "more efficiently."
    ]
   }
  ],
