--- a/primitives/02-conditioning_and_inference.ipynb
+++ b/primitives/02-conditioning_and_inference.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "The `trace` class lets us maintain a trace of the entire model, so we can query\n",
     "the particular terms we care about without having to pass them around between\n",
-    "different name space."
+    "different name spaces."
    ]
   },
   {
