--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -15,26 +15,32 @@
     "import pyro.distributions as dist\n",
     "import torch\n",
     "from pyro import poutine\n",
+    "import math\n",
+    "import torch\n",
+    "import torch.distributions.constraints as constraints\n",
+    "import pyro\n",
+    "from pyro.optim import Adam\n",
+    "from pyro.infer import SVI, Trace_ELBO\n",
+    "import pyro.distributions as dist\n",
     "\n",
-    "# still needed?\n",
-    "torch.multiprocessing.set_start_method(\"spawn\")\n"
+    "# still needed?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's return to and extend an example from a previous notebook. \n",
-    "Suppose we want to weigh objects with a scale that has some measurement noise.\n",
+    "Let's return to and extend [an example from the pyro tutorial](https://pyro.ai/examples/svi_part_i.html).\n",
+    "We depart from the example there though in that we will use Monte Carlo sampling to understand what is going on here.\n",
     "\n",
+    "$$ \\operatorname{fairness} \\sim \\operatorname{Beta}(10, 10) $$\n",
     "\n",
-    "\n",
-    "$$ \\operatorname{measurement} | \\operatorname{weight} \\sim \\mathcal{N}(\\operatorname{weight}, 0.75).$$\n"
+    "$$ \\operatorname{measurement} \\sim \\operatorname{Binom}(\\operatorname{fairness}) $$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -45,20 +51,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "measurement: 7.688745021820068;\t likelihood: 0.488033264875412\n"
+      "....................\n",
+      "based on the data and our prior belief, the fairness of the coin is 0.527 +- 0.090\n"
      ]
     }
    ],
    "source": [
+    "pyro.clear_param_store()\n",
     "\n",
-    "def make_scale_dist(weight, noise):\n",
-    "    return dist.Normal(weight, noise)\n",
+    "# create some data with 6 observed heads and 4 observed tails\n",
+    "data = []\n",
+    "for _ in range(6):\n",
+    "    data.append(torch.tensor(1.0))\n",
+    "for _ in range(4):\n",
+    "    data.append(torch.tensor(0.0))\n",
     "\n",
-    "weight, noise = 8, 0.75\n",
-    "scale_dist = make_scale_dist(weight, noise)\n",
-    "measurement_1 = pyro.sample(\"measurement_1\", scale_dist)\n",
-    "prob = scale_dist.log_prob(measurement_1).exp()\n",
-    "print(f\"measurement: {measurement_1};\\t likelihood: {prob}\")\n"
+    "n_steps = 2000\n",
+    "\n",
+    "def model(data):\n",
+    "    # define the hyperparameters that control the beta prior\n",
+    "    alpha0 = torch.tensor(10.0)\n",
+    "    beta0 = torch.tensor(10.0)\n",
+    "    # sample f from the beta prior\n",
+    "    f = pyro.sample(\"latent_fairness\", dist.Beta(alpha0, beta0))\n",
+    "    # loop over the observed data\n",
+    "    for i in range(len(data)):\n",
+    "        # observe datapoint i using the bernoulli likelihood\n",
+    "        pyro.sample(\"obs_{}\".format(i), dist.Bernoulli(f), obs=data[i])\n",
+    "\n",
+    "def guide(data):\n",
+    "    # register the two variational parameters with Pyro\n",
+    "    # - both parameters will have initial value 15.0.\n",
+    "    # - because we invoke constraints.positive, the optimizer\n",
+    "    # will take gradients on the unconstrained parameters\n",
+    "    # (which are related to the constrained parameters by a log)\n",
+    "    alpha_q = pyro.param(\"alpha_q\", torch.tensor(15.0),\n",
+    "                         constraint=constraints.positive)\n",
+    "    beta_q = pyro.param(\"beta_q\", torch.tensor(15.0),\n",
+    "                        constraint=constraints.positive)\n",
+    "    # sample latent_fairness from the distribution Beta(alpha_q, beta_q)\n",
+    "    pyro.sample(\"latent_fairness\", dist.Beta(alpha_q, beta_q))\n",
+    "\n",
+    "# setup the optimizer\n",
+    "adam_params = {\"lr\": 0.0005, \"betas\": (0.90, 0.999)}\n",
+    "optimizer = Adam(adam_params)\n",
+    "\n",
+    "# setup the inference algorithm\n",
+    "svi = SVI(model, guide, optimizer, loss=Trace_ELBO())\n",
+    "\n",
+    "# do gradient steps\n",
+    "for step in range(n_steps):\n",
+    "    svi.step(data)\n",
+    "    if step % 100 == 0:\n",
+    "        print('.', end='')\n",
+    "\n",
+    "# grab the learned variational parameters\n",
+    "alpha_q = pyro.param(\"alpha_q\").item()\n",
+    "beta_q = pyro.param(\"beta_q\").item()\n",
+    "\n",
+    "# here we use some facts about the beta distribution\n",
+    "# compute the inferred mean of the coin's fairness\n",
+    "inferred_mean = alpha_q / (alpha_q + beta_q)\n",
+    "# compute inferred standard deviation\n",
+    "factor = beta_q / (alpha_q * (1.0 + alpha_q + beta_q))\n",
+    "inferred_std = inferred_mean * math.sqrt(factor)\n",
+    "\n",
+    "print(\"\\nbased on the data and our prior belief, the fairness \" +\n",
+    "      \"of the coin is %.3f +- %.3f\" % (inferred_mean, inferred_std))"
    ]
   },
   {
@@ -96,15 +155,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "The PDF looks like a Gaussian centered at $x=8$, and lines up closely with the\n",
-    "sample histogram. Now let's examine a more complicated model, where we have a\n",
-    "good guess of the object's weight. Mathematically, this becomes\n",
-    "\n",
-    "$$ \\operatorname{weight} | \\operatorname{guess} \\sim \\mathcal{N}(\\operatorname{guess}, 1) $$\n",
-    "\n",
-    "$$ \\operatorname{measurement} | \\operatorname{weight} \\sim \\mathcal{N}(\\operatorname{weight}, 0.75) $$\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
