--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -252,7 +252,7 @@
     "    f = pyro.sample(\"latent_fairness\", dist.Beta(torch.tensor(alpha0), torch.tensor(beta0)))\n",
     "    # loop over the observed data\n",
     "    with pyro.plate(\"data\", tosses.shape[0]):\n",
-    "        pyro.sample(\"tosses\", dist.Bernoulli(f), obs=toss)\n"
+    "        pyro.sample(\"tosses\", dist.Bernoulli(f), obs=tosses)\n"
    ]
   },
   {
@@ -270,8 +270,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyro.set_rng_seed(103)\n",
-    "nuts_kernel = NUTS(model, jit_compile=True)\n",
+    "pyro.set_rng_seed(107)\n",
+    "nuts_kernel = NUTS(model,\n",
+    "    jit_compile=True\n",
+    ")\n",
     "mcmc = MCMC(nuts_kernel, num_samples=2000, warmup_steps=200)\n",
     "mcmc.run(tosses)\n",
     "\n",
@@ -299,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"We now believe the fairness is {latent_fairness_samples.mean():.3f} ± {latent_fairness_samples.std():.3f}\")"
+    "print(f\"We now believe the fairness is {fairness_samples_1000.mean():.3f} ± {fairness_samples_1000.std()*1.96:.3f}\")"
    ]
   },
   {
@@ -322,6 +324,13 @@
    "source": [
     "## An actual regression problem"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -437,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
