--- a/operator_inversion/operator_inversion.ipynb
+++ b/operator_inversion/operator_inversion.ipynb
@@ -12,7 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Look we can do approximate probabilistic inference with a complicated nueral network!"
+    "Look, we can do approximate probabilistic inference with a complicated nueral network!\n",
+    "\n"
    ]
   },
   {
@@ -36,13 +37,8 @@
     "from matplotlib import rc\n",
     "from matplotlib_inline.backend_inline import set_matplotlib_formats\n",
     "set_matplotlib_formats('png')\n",
-    "# plt.rcParams.update({figure.figsize'=[12, 12]})\n",
-    "# plt.rcParams.update({'figure.dpi': 200})\n",
     "plt.rcParams.update({'font.size': 20})\n",
-    "%matplotlib inline\n",
-    "\n",
-    "from dotenv import load_dotenv, find_dotenv\n",
-    "load_dotenv(find_dotenv());\n",
+    "% matplotlib inline\n",
     "\n",
     "import h5py\n",
     "\n",
