notes about params

--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -14,6 +14,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* http://pyro.ai/examples/bayesian_regression.html\n",
+    "* http://pyro.ai/examples/bayesian_regression_ii.html\n",
+    "* http://pyro.ai/examples/intro_part_i.html\n",
+    "* http://pyro.ai/examples/intro_part_ii.html\n",
+    "* http://pyro.ai/examples/effect_handlers.html\n",
+    "* http://pyro.ai/examples/sir_hmc.html\n",
+    "* https://docs.pyro.ai/en/1.7.0/poutine.html\n",
+    "* http://pyro.ai/examples/mle_map.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Coin fairness"
    ]
   },
