--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -31,14 +31,16 @@
     "import torch\n",
     "import torch.distributions.constraints as constraints\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import pyro\n",
     "from pyro.optim import Adam\n",
     "from pyro.infer import SVI, Trace_ELBO\n",
     "import pyro.distributions as dist\n",
-    "from pyro.infer import Predictive, MCMC, NUTS\n",
+    "from pyro.infer import MCMC, NUTS\n",
     "import csv\n",
     "import numpy as np\n",
-    "from src.graphs import coin_graph_multi, coin_graph_plate, coin_graph\n"
+    "from src.graphs import coin_graph_multi, coin_graph_plate, coin_graph\n",
+    "sns.set_style()"
    ]
   },
   {
@@ -120,6 +122,7 @@
     "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
+    "plt.legend(loc=\"upper left\");\n",
     "plt.show()"
    ]
   },
@@ -200,6 +203,7 @@
     "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
+    "plt.legend(loc=\"upper left\");\n",
     "plt.show()"
    ]
   },
@@ -207,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have in fact tossed the coin 1000 times in our new Google-funded robotic coin tossing laboratory, and recorded the data in a CSV file. Lets load that up and print the first few observations:"
+    "We have in fact tossed the coin 100 times in our new Google-funded robotic coin tossing laboratory, and recorded the data in a CSV file. Lets load that up and print the first few observations:"
    ]
   },
   {
@@ -261,7 +265,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coin_graph_plate(1000)"
+    "coin_graph_plate(100)"
    ]
   },
   {
@@ -279,12 +283,13 @@
     "\n",
     "# Plot the prior and posterior distributions\n",
     "prior_fairness = dist.Beta(alpha0, beta0)\n",
-    "fairness_samples_1000 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
+    "fairness_samples_100 = mcmc.get_samples()['latent_fairness'].cpu().numpy()\n",
     "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
     "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
-    "plt.hist(fairness_samples_1000, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.8, label = \"1000 observation posterior\")\n",
+    "plt.hist(fairness_samples_100, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.8, label = \"100 observation posterior\")\n",
     "measurements = torch.linspace(0, 1, 1000)\n",
     "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
+    "plt.legend(loc=\"upper left\");\n",
     "plt.show()"
    ]
   },
@@ -301,32 +306,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"We now believe the fairness is {fairness_samples_1000.mean():.3f} ± {fairness_samples_1000.std()*1.96:.3f}\")"
+    "print(f\"We now believe the fairness is {fairness_samples_100.mean():.3f} ± {fairness_samples_100.std()*1.96:.3f}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## archived SVI stuff\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "## Summarising posterior with distributions\n",
     "\n",
-    "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(12, 10))\n",
-    "fig.suptitle(\"Marginal Posterior density - Regression Coefficients\", fontsize=16)\n",
-    "for i, ax in enumerate(axs.reshape(-1)):\n",
-    "    site = sites[i]\n",
-    "    sns.distplot(svi_samples[site], ax=ax, label=\"SVI (DiagNormal)\")\n",
-    "    sns.distplot(hmc_samples[site], ax=ax, label=\"HMC\")\n",
-    "    ax.set_title(site)\n",
-    "handles, labels = ax.get_legend_handles_labels()\n",
-    "fig.legend(handles, labels, loc='upper right');"
+    "So far we have been using MCMC to summarise the posterior distribution of samples, which is a sound default choice; this method is well-understood and easy(ish) to configure, and is eventually unbiased with respect to many estimands.\n",
+    "\n",
+    "It also has downsides - for example, we have possibly quantified the output of a very simple model with a very large number of random samples.\n",
+    "\n",
+    "An alternative approach is to use variation inference, which summarises the posterior distributions with other distributions. (this is in fact how they set it up in the tutorial)\n",
+    "\n",
+    "In Pyro terminology these approximation distributions are `guide` distributions and their parameters are captures by `pyro.param`s.\n",
+    "We can access these in a default param store, which we get by calling `pyro.get_param_store()`.\n"
    ]
   },
   {
@@ -339,14 +335,8 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "# # define how much of our data to use\n",
-    "n_tosses = 1\n",
-    "\n",
     "# clear the param store in case we're in a REPL\n",
     "pyro.clear_param_store()\n",
-    "\n",
-    "\n",
     "\n",
     "def guide(tosses):\n",
     "    # register the two variational parameters with Pyro\n",
@@ -362,7 +352,7 @@
     "    pyro.sample(\"latent_fairness\", dist.Beta(alpha_q, beta_q))\n",
     "\n",
     "    \n",
-    "def basic_coin_posterior(model, guide, tosses):\n",
+    "def coin_variational_posterior(model, guide, tosses):\n",
     "    # setup the optimizer\n",
     "    n_steps = 200\n",
     "    adam_params = {\"lr\": 0.005, \"betas\": (0.90, 0.999)}\n",
@@ -377,6 +367,8 @@
     "        if step % 100 == 0:\n",
     "            print('.', end='')\n",
     "\n",
+    "# Do the inference\n",
+    "coin_variational_posterior(model, guide, tosses)\n",
     "\n",
     "# # grab the learned variational parameters\n",
     "alpha_q = pyro.param(\"alpha_q\").item()\n",
@@ -389,14 +381,25 @@
     "\n",
     "print(\"\\nbased on the data and our prior belief, the fairness \" +\n",
     "      \"of the coin is %.3f +- %.3f\" % (inferred_mean, inferred_std))\n",
-    "lb = 0\n",
-    "ub = 1\n",
-    "resolution = 1000\n",
-    "measurements = torch.linspace(lb, ub, resolution)\n",
     "\n",
-    "plt.plot(measurements, posterior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"posterior\");\n",
-    "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"red\", label=\"prior\");\n"
+    "# Plot the prior and posterior distributions\n",
+    "prior_fairness = dist.Beta(alpha0, beta0)\n",
+    "plt.hist(fairness_samples_1, bins=np.linspace(0,1,33), density=True, color=\"red\", label = \"1 observation posterior\", alpha=0.2)\n",
+    "plt.hist(fairness_samples_5, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.4, label = \"5 observation posterior\")\n",
+    "plt.hist(fairness_samples_100, bins=np.linspace(0,1,33), density=True, color=\"red\", alpha = 0.8, label = \"100 observation posterior\")\n",
+    "measurements = torch.linspace(0, 1, 1000)\n",
+    "plt.plot(measurements, prior_fairness.log_prob(measurements).exp(), color=\"blue\", label=\"prior\");\n",
+    "plt.plot(measurements, posterior_fairness.log_prob(measurements).exp(), color=\"purple\", label=\"variational posterior\");\n",
+    "plt.legend(loc=\"upper left\")\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
