--- a/primitives/04-conditioning_on_data.ipynb
+++ b/primitives/04-conditioning_on_data.ipynb
@@ -40,7 +40,7 @@
     "import csv\n",
     "import numpy as np\n",
     "from src.graphs import coin_graph_multi, coin_graph_plate, coin_graph\n",
-    "sns.set_style()"
+    "sns.set_theme()"
    ]
   },
   {
