--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -6,29 +6,8 @@
    "source": [
     "# Posterior inference and regression\n",
     "\n",
-    "http://pyro.ai/examples/bayesian_regression.html\n",
-    "http://pyro.ai/examples/bayesian_regression_ii.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* http://pyro.ai/examples/bayesian_regression.html\n",
-    "* http://pyro.ai/examples/bayesian_regression_ii.html\n",
-    "* http://pyro.ai/examples/intro_part_i.html\n",
-    "* http://pyro.ai/examples/intro_part_ii.html\n",
-    "* http://pyro.ai/examples/effect_handlers.html\n",
-    "* http://pyro.ai/examples/sir_hmc.html\n",
-    "* https://docs.pyro.ai/en/1.7.0/poutine.html\n",
-    "* http://pyro.ai/examples/mle_map.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Coin fairness"
+    "The examples in the previous notebook don’t really show much in the way of fancy prediction; for that we want to do some _regression_.\n",
+    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see also the McElreath book for a really nice discussion of this one."
    ]
   },
   {
@@ -44,7 +23,6 @@
     "import os\n",
     "from functools import partial\n",
     "from math import sqrt\n",
-    "import csv\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -58,10 +36,7 @@
     "from pyro.optim import Adam\n",
     "from pyro.infer import SVI, Trace_ELBO, Predictive, MCMC, NUTS\n",
     "import pyro.distributions as dist\n",
-    "\n",
-    "# Set matplotlib settings\n",
-    "%matplotlib inline\n",
-    "plt.style.use('default')"
+    "sns.set_theme()"
    ]
   },
   {
@@ -71,8 +46,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "DATA_URL = \"https://d2hg8soec8ck9v.cloudfront.net/datasets/rugged_data.csv\"\n",
-    "rugged_data = pd.read_csv(DATA_URL, encoding=\"ISO-8859-1\")"
+    "# data from https://d2hg8soec8ck9v.cloudfront.net/datasets/rugged_data.csv\n",
+    "rugged_data = pd.read_csv(\"rugged_data.csv\", encoding=\"ISO-8859-1\")"
    ]
   },
   {
@@ -172,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
