pretty up introductory notebook and others

--- a/probabilistic_programming_background.ipynb
+++ b/probabilistic_programming_background.ipynb
@@ -6,10 +6,30 @@
    "source": [
     "# What is probabilistic programming? And why?\n",
     "\n",
-    "A probabilistic programming system is a system for specifying stochastic generative models, and reasoning about them.\n",
-    "Or, as [Fabiana Clemente puts it](https://towardsdatascience.com/intro-to-probabilistic-programming-b47c4e926ec5)\n",
+    "A probabilistic programming system is a system for specifying stochastic\n",
+    "generative models, and reasoning about them. Or, as\n",
+    "[Fabiana Clemente puts it](https://towardsdatascience.com/intro-to-probabilistic-programming-b47c4e926ec5)\n",
     "\n",
-    "> Probabilistic programming is about doing statistics using the tools of computer science."
+    "> Probabilistic programming is about doing statistics using the tools of\n",
+    "> computer science.\n",
+    "\n",
+    "Conceptually, probabilistic programming is a way of automating operations in\n",
+    "[probabilistic graphical models](https://en.wikipedia.org/wiki/Graphical_model),\n",
+    "similarly to how automatic differentiation frameworks (like Pytorch or\n",
+    "Tensorflow) can automate the operations of forward and backward propagation. a\n",
+    "PPL provides tools that make it easy to build a programmatic representation of\n",
+    "your probabilistic model, even if you've never thought of it specifically in\n",
+    "terms of a *graphical* model (e.g. if you only have your model as a set of\n",
+    "equations). Once that's accomplished, you can use the PPL's built-in functions\n",
+    "to perform typical operations on the model, such as sampling, conditioning,\n",
+    "computing probabilities, etc.\n",
+    "\n",
+    "One important benefit is that you (usually) get backpropagation of gradients for\n",
+    "free. This is extremely useful if you want to apply gradient-based methods for\n",
+    "inference, especially if your model is complex and uses more obscure\n",
+    "distributions than a mixture of Gaussians. We will see over the course of the\n",
+    "hackfest just how quick and easy it is to turn an arbitrary set of equations\n",
+    "into a working probabilistic model that you can then run ML algorithms on.\n"
    ]
   },
   {
@@ -20,14 +40,23 @@
     "\n",
     "There are [too many PPLs](https://en.wikipedia.org/wiki/Probabilistic_programming)!\n",
     "But pyro is the one that is probably closest to gaining critical mass.\n",
-    "It is not the simplest one, but it _does_ integrate high quality versions of hip neural network methods into the classic PPL methods.\n",
+    "It is not the simplest one, but it _does_ integrate high quality versions of hip\n",
+    "neural network methods into the classic PPL methods. This is typically a good\n",
+    "predictor of a framework's longevity, so hopefully the skills you develop in\n",
+    "this hackfest won't become obsolete too quickly.\n",
     "It is built of pytorch, which many of us here already use.\n",
+    "Finally, we have more experience inside the FSP with pyro than with any other\n",
+    "PPL.\n",
     "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Other PPLs\n",
     "\n",
@@ -39,7 +68,7 @@
     "* Why not write your own? Everyone else seems to.\n",
     "\n",
     "\n",
-    "## References\n",
+    "## Additional Reading\n",
     "\n",
     "* Jan-Willem van de Meent, Brooks Paige, Hongseok Yang, Frank Wood, [An Introduction to Probabilistic Programming](https://arxiv.org/abs/1809.10756)\n",
     "* [Bayes for Hackers](https://github.com/CamDavidsonPilon/Probabilistic-Programming-and-Bayesian-Methods-for-Hackers)\n",
@@ -54,21 +83,8 @@
     "* Noah D. Goodman, Joshua B. Tenenbaum et al, [Probabilistic Models of Cognition - 2nd Edition](http://probmods.org/)\n",
     "* Noah D. Goodman and Andreas Stuhlmüller, [The Design and Implementation of Probabilistic Programming Languages](http://dippl.org/)\n",
     "\n",
-    "## Links discussed\n",
-    "\n",
-    "* a neat [databricks example](https://databricks.com/blog/2021/06/29/using-bayesian-hierarchical-models-to-infer-the-disease-parameters-of-covid-19.html)\n",
-    "* [Example: analyzing baseball stats with MCMC](http://pyro.ai/examples/baseball.html)\n",
-    "* [Example: hierarchical mixed-effect hidden Markov models](http://pyro.ai/examples/mixed_hmm.html)\n",
-    "* [Example: Inference with Markov Chain Monte Carlo](http://pyro.ai/examples/mcmc.html)\n",
-    "* [Example: Sequential Monte Carlo Filtering](http://pyro.ai/examples/smcfilter.html)\n",
-    "* [Example: Kalman Filter](http://pyro.ai/examples/ekf.html)\n",
-    "* [Mini-Pyro](http://pyro.ai/examples/minipyro.html)"
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
