--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -7,7 +7,9 @@
     "# Posterior inference and regression\n",
     "\n",
     "The examples in the previous notebook don’t really show much in the way of fancy prediction; for that we want to do some _regression_.\n",
-    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see also the McElreath book for a really nice discussion of this one."
+    "We will follow the [pyro regression tutorial](http://pyro.ai/examples/bayesian_regression.html) but see also the McElreath book for a really nice discussion of this regression problem.\n",
+    "\n",
+    "* http://pyro.ai/examples/predictive_deterministic.html"
    ]
   },
   {
@@ -20,7 +22,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "from functools import partial\n",
     "from math import sqrt\n",
     "\n",
@@ -36,6 +37,7 @@
     "from pyro.optim import Adam\n",
     "from pyro.infer import SVI, Trace_ELBO, Predictive, MCMC, NUTS\n",
     "import pyro.distributions as dist\n",
+    "from pyro import poutine\n",
     "sns.set_theme()"
    ]
   },
@@ -47,7 +49,8 @@
    "source": [
     "\n",
     "# data from https://d2hg8soec8ck9v.cloudfront.net/datasets/rugged_data.csv\n",
-    "rugged_data = pd.read_csv(\"rugged_data.csv\", encoding=\"ISO-8859-1\")"
+    "rugged_data = pd.read_csv(\"rugged_data.csv\", encoding=\"ISO-8859-1\")\n",
+    "rugged_data.head()"
    ]
   },
   {
@@ -56,16 +59,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyro.clear_param_store()\n",
-    "def model(is_cont_africa, ruggedness, log_gdp):\n",
-    "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
-    "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
-    "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
-    "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
-    "    sigma = pyro.sample(\"sigma\", dist.Uniform(0., 10.))\n",
-    "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
-    "    with pyro.plate(\"data\", len(ruggedness)):\n",
-    "        pyro.sample(\"obs\", dist.Normal(mean, sigma), obs=log_gdp)"
+    "# preprocess data\n",
+    "df = rugged_data[[\"cont_africa\", \"rugged\", \"rgdppc_2000\"]]\n",
+    "df = df[np.isfinite(df.rgdppc_2000)]\n",
+    "df[\"rgdppc_2000\"] = np.log(df[\"rgdppc_2000\"])\n",
+    "train = torch.tensor(df.values, dtype=torch.float)\n",
+    "is_cont_africa, ruggedness, log_gdp = train[:, 0], train[:, 1], train[:, 2]"
    ]
   },
   {
@@ -81,14 +80,32 @@
     "        marginal_site = pd.DataFrame(values)\n",
     "        describe = marginal_site.describe(percentiles=[.05, 0.25, 0.5, 0.75, 0.95]).transpose()\n",
     "        site_stats[site_name] = describe[[\"mean\", \"std\", \"5%\", \"25%\", \"50%\", \"75%\", \"95%\"]]\n",
-    "    return site_stats\n",
-    "\n",
-    "# Prepare training data\n",
-    "df = rugged_data[[\"cont_africa\", \"rugged\", \"rgdppc_2000\"]]\n",
-    "df = df[np.isfinite(df.rgdppc_2000)]\n",
-    "df[\"rgdppc_2000\"] = np.log(df[\"rgdppc_2000\"])\n",
-    "train = torch.tensor(df.values, dtype=torch.float)\n",
-    "is_cont_africa, ruggedness, log_gdp = train[:, 0], train[:, 1], train[:, 2]\n"
+    "    return site_stats\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Linear) regression model capturing a predictor variables (Africa or not, Terrain roughness) and a response variable (GDP), and an interaction term."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyro.clear_param_store()\n",
+    "def model(is_cont_africa, ruggedness, log_gdp):\n",
+    "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
+    "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
+    "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
+    "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
+    "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
+    "    with pyro.plate(\"data\", len(ruggedness)):\n",
+    "        mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
+    "        pyro.sample(\"log_gdp\", dist.Normal(mean, sigma), obs=log_gdp)"
    ]
   },
   {
@@ -111,21 +128,183 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pyro.clear_param_store()\n",
+    "def model3(is_cont_africa, ruggedness):\n",
+    "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
+    "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
+    "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
+    "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
+    "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
+    "    # with pyro.plate(\"data\", len(ruggedness)):\n",
+    "    is_cont_africa = pyro.deterministic(\"is_cont_africa\", is_cont_africa)\n",
+    "    ruggedness = pyro.deterministic(\"ruggedness\", ruggedness)\n",
+    "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
+    "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))\n",
+    "    return s\n",
+    "\n",
+    "trace = poutine.trace(model2).get_trace(is_cont_africa, ruggedness)\n",
+    "trace.compute_log_prob()  # optional, but allows printing of log_prob shapes\n",
+    "print(trace.format_shapes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyro.clear_param_store()\n",
+    "def model2():\n",
+    "    a = pyro.sample(\"a\", dist.Normal(0., 10.))\n",
+    "    b_a = pyro.sample(\"bA\", dist.Normal(0., 1.))\n",
+    "    b_r = pyro.sample(\"bR\", dist.Normal(0., 1.))\n",
+    "    b_ar = pyro.sample(\"bAR\", dist.Normal(0., 1.))\n",
+    "    sigma = pyro.sample(\"sigma\", dist.Gamma(1.0, 0.5)) \n",
+    "    # is_cont_africa = pyro.deterministic(\"is_cont_africa\", torch.tensor(0.))\n",
+    "    # ruggedness = pyro.deterministic(\"ruggedness\", torch.tensor(0.))\n",
+    "    # is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Delta(torch.tensor(0.)))\n",
+    "    # ruggedness = pyro.sample(\"ruggedness\", dist.Delta(torch.tensor(0.)))\n",
+    "    is_cont_africa = pyro.sample(\"is_cont_africa\", dist.Normal(0.5, 0.5))\n",
+    "    ruggedness = pyro.sample(\"ruggedness\", dist.Normal(0.5, 0.5))\n",
+    "    mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
+    "    s = pyro.sample(\"log_gdp\", dist.Normal(mean, sigma))\n",
+    "    return s\n",
+    "\n",
+    "trace = poutine.trace(model2).get_trace()\n",
+    "# trace.compute_log_prob()  # optional, but allows printing of log_prob shapes\n",
+    "print(trace.format_shapes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trace = poutine.trace(poutine.condition(model2, data={\"log_gdp\": log_gdp, \"ruggedness\":ruggedness, \"is_cont_africa\": is_cont_africa})).get_trace()\n",
+    "# trace.compute_log_prob()  # optional, but allows printing of log_prob shapes\n",
+    "print(trace.format_shapes())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "observed_model = poutine.condition(model2, data={\n",
+    "    \"log_gdp\": log_gdp, \"ruggedness\": ruggedness, \"is_cont_africa\": is_cont_africa})\n",
+    "nuts_kernel = NUTS(observed_model)\n",
+    "\n",
+    "mcmc = MCMC(nuts_kernel, num_samples=1000, warmup_steps=200)\n",
+    "mcmc.run()\n",
+    "\n",
+    "hmc_samples = {k: v.detach().cpu().numpy() for k, v in mcmc.get_samples().items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcmc.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for site, values in summary(hmc_samples).items():\n",
     "    print(\"Site: {}\".format(site))\n",
-    "    print(values, \"\\n\")\n",
-    "\n"
+    "    print(values, \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Predictive(poutine.condition(model2, data={\n",
+    "    \"ruggedness\": torch.tensor(1000.0), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Predictive(poutine.condition(model2, data={\n",
+    "    \"ruggedness\": torch.tensor(0.0), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['log_gdp']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Predictive(poutine.condition(model2, data={\n",
+    "    \"log_gdp\": torch.tensor(0.0), \"is_cont_africa\": torch.tensor(0.)}), posterior_samples=mcmc.get_samples())()['ruggedness']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictive = Predictive(model2, posterior_samples=mcmc.get_samples())\n",
+    "predictive(is_cont_africa, ruggedness, log_gdp)['gdp']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://num.pyro.ai/en/stable/tutorials/bayesian_regression.html#Posterior-Predictive-Distribution\n",
-    "http://num.pyro.ai/en/stable/tutorials/bayesian_hierarchical_linear_regression.html\n",
-    "https://www.nature.com/articles/s43586-020-00001-2\n",
-    "https://florianwilhelm.info/2020/10/bayesian_hierarchical_modelling_at_scale/"
+    "For this we need to use the `Predictive` class, which is not well explained in the docs.\n",
+    "An only-slightly-confusing explanation is [here](http://pyro.ai/examples/bayesian_regression.html#Model-Evaluation)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictive = Predictive(model, posterior_samples=mcmc.get_samples())\n",
+    "predictive(is_cont_africa, ruggedness, log_gdp)['obs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictive(torch.tensor(1.), torch.tensor(1.))['obs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mcmc.get_samples().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
