minimum viable regression graph

--- a/primitives/05-regression_with_data.ipynb
+++ b/primitives/05-regression_with_data.ipynb
@@ -38,7 +38,9 @@
     "from pyro.infer import SVI, Trace_ELBO, Predictive, MCMC, NUTS\n",
     "import pyro.distributions as dist\n",
     "from pyro import poutine\n",
-    "sns.set_theme()"
+    "sns.set_theme()\n",
+    "\n",
+    "from src import graphs"
    ]
   },
   {
@@ -107,6 +109,22 @@
     "        mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
     "        pyro.sample(\"log_gdp\", dist.Normal(mean, sigma), obs=log_gdp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphs.ruggedness_graph(170)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
