massive data object

--- a/operator_inversion/__export_data.ipynb
+++ b/operator_inversion/__export_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,22 @@
     "data = h5py.File('/scratch1/mac581/Data/PDE/navier-stokes/grf_forcing.h5', 'r')\n",
     "\n",
     "BATCH_I = 0\n",
-    "STEPS = 50"
+    "STEPS = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trimmed_x = data['valid']['u'][BATCH_I:BATCH_I+1,...]\n",
-    "trimmed_latent = data['valid']['f'][BATCH_I:BATCH_I+1,...,:STEPS]\n",
+    "trimmed_x = data['valid']['u'][BATCH_I:BATCH_I+1,...,:STEPS]\n",
+    "trimmed_latent = data['valid']['f'][BATCH_I:BATCH_I+1,...]\n",
     "\n",
     "np.savez_compressed(\n",
     "    './data/grf_forcing_single.npz',\n",
-    "    {\n",
-    "        'x': trimmed_x,\n",
-    "        'latent': trimmed_latent\n",
-    "    }\n",
+    "    u=trimmed_x,\n",
+    "    f=trimmed_latent\n",
     ")\n"
    ]
   },
